--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "nishit",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "assert": "^2.0.0",
     "docker-cli-js": "^2.8.0",
